--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-xl fixed-top navbar-dark bg-dark">
       <div class="container">
         <div>
           <a class="navbar-brand" href="#">E-Commerce Website</a>
@@ -53,16 +53,54 @@
       </div>
     </nav>
 
-    <div class="container d-flex flex-row align-items-center justify-content-evenly">
+  
+    <div class="container landing-page d-flex flex-row align-items-center justify-content-evenly">
       <div class="col-md-6">
         <h2>Welcome to Our E-Commerce Website</h2>
         <div class="dropdown-divider" style="background-color: black; width: 80%;"></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
-    <div class="col-md-6">
+      <div class="col-md-6">
         <img src="./online_shopping.svg" alt="online Shopping">
       </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>  
+    </div>
+    
+    <!-- Custom JavaScript -->
+    <script src="./scripts.js"></script>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
