Design & Functionality Update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-xl fixed-top navbar-dark bg-dark">
+    <nav id="nav" class="navbar navbar-expand-xl fixed-top navbar-light bg-light">
       <div class="container">
         <div>
           <a class="navbar-brand" href="#">E-Commerce Website</a>
