--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="col-md-6">
-          <img src="./img/online_shopping.svg" alt="online Shopping" loading="lazy">
+          <img src="./img/online_shopping.svg" alt="online Shopping">
         </div>
       </div>
 
