Design & Functionality Update

--- a/index.html
+++ b/index.html
@@ -56,19 +56,14 @@
       </div>
     </nav>
 
-    <div class="container-fluid d-flex flex-row align-items-center justify-content-evenly landing-page" id="landing-page">
-        <div class="col-md-6">
+    <div class="container-fluid text-center landing-page" id="landing-page">
           <h1>Welcome to ECOM</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-        <div class="col-md-6">
-          <img src="./img/online_shopping.svg" alt="online Shopping" loading="lazy">
-        </div>
       </div>
 
     <div class="container-fluid products" id="product">
       <div class="container">
-        <h1 class="text-center" style="font-size: 5vw;margin: 3.5rem;">Trending</h1>
+        <h1 class="text-center" style="font-size: 3rem;padding: 3.5rem;">Trending</h1>
         <div class="row" id="firstRow">
         </div>
     
@@ -83,7 +78,7 @@
         <div class="modal-content" id="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="product-title">Product Title</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" id="btn-close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <img src="" class="card-img-top" alt="Product Image" id="productImage" loading="lazy">
