Index.html & Scripts.js Update

--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
     </div>
 
     <button class="circle" onclick="toggleDarkMode()"><i class="fas fa-moon"></i></button>
+    
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Products</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About Us</a></li>
+      </ul>
+      <p class="text-center text-muted">© <span id="year"></span>  ECOM</p>
+    </footer>
 
     <!-- Custom JavaScript -->
     <script src="./scripts.js"></script>
