--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="#about-us" class="nav-link">About Us</a>
+              <a href="#aboutUs" class="nav-link">About Us</a>
             </li>
           </ul>    
         </div>
