--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body class="bg-light">
 
     <!-- Navbar -->
-    <nav id="nav" class="navbar navbar-expand-xl fixed-top navbar-light bg-light">
+    <nav id="nav" class="navbar navbar-expand-xl fixed-top navbar-light bg-light" id="home">
       <div class="container">
         <div>
           <a class="navbar-brand" href="#">ECOM</a>
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#products">Products</a>
